# csift

./: README.md
sample/image/: READNE.md  reset.sh
src/: CMakeLists.txt  RunSfM.sh  detect_directory.c  main.c  ops.h  output_image_list.c
src/SIFT/: DoG.c  SIFT.h  SIFT_main.c  allocate_image.c  class.h  down_sampling.c  grayscale.c  load_jpeg.c  write_jpeg.c
